// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lineComment parse // #import foo 1`] = `
[
  {
    "args": [
      "foo",
    ],
    "kind": "directive",
    "name": "#import",
    "position": 14,
  },
]
`;

exports[`parse #export foo 1`] = `
[
  {
    "args": undefined,
    "kind": "export",
    "name": "foo",
  },
]
`;

exports[`parse #export foo(bar) 1`] = `
[
  {
    "args": [
      [
        "bar",
      ],
    ],
    "kind": "export",
    "name": "foo",
  },
]
`;

exports[`parse #export foo(bar, baz, boo) 1`] = `
[
  {
    "args": [
      [
        "bar",
        "baz",
        "boo",
      ],
    ],
    "kind": "export",
    "name": "foo",
  },
]
`;

exports[`parse #import foo 1`] = `
[
  {
    "args": [
      "foo",
    ],
    "kind": "directive",
    "name": "#import",
    "position": 11,
  },
]
`;

exports[`parse empty string 1`] = `[]`;
